@@ -351,6 +351,10 @@ Changed in ATK 5.7
 + Added support for showing a warning message when leaving the
   page without saving or cancelling. To enable this functionality
   please set $config_lose_changes_warning to true. [Peter]
++ Added theme resource, allows you to include other Smarty theme templates 
+  using {include file="theme:template.tpl} syntax. The resource will make 
+  sure you get the correct file from the correct directory (even works for
+  overrides at the theme level). [Peter]
 * atkTime now only returns integers for getHours, getMinutes, etc. [Boy]
 * Added ability to register modifiers. [Boy]
 * Changed function exportFile for IE7. If IE => inline to attachment [Koen]
